[package]
name = "mimxrt685s-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
mimxrt685s-pac = { version = "0.1.1", features = ["rt", "critical-section"] }
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
